--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.1",
   "scripts": {
     "prepare": "panda codegen",
+    "panda-watch": "panda --watch",
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro check && astro build",
